[gd_scene load_steps=14 format=3 uid="uid://buxf2qjtwa6vn"]

[ext_resource type="Script" uid="uid://bc4gv5y4q5r7e" path="res://scripts/main_menu.gd" id="1_xsilq"]
[ext_resource type="Texture2D" uid="uid://tuiyxcdsc4pt" path="res://ui/city.png" id="2_km7eu"]
[ext_resource type="FontFile" uid="uid://tpg8lerto6x3" path="res://ui/Pixel Digivolve Italic.otf" id="3_5a6dn"]
[ext_resource type="FontFile" uid="uid://qjlyd3dqg1ss" path="res://ui/Pixel Digivolve.otf" id="4_ljdde"]
[ext_resource type="AudioStream" uid="uid://bo1r63fagbf6w" path="res://music themes/claimed_by_the_void.mp3" id="5_km7eu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bajiw"]
texture = ExtResource("2_km7eu")
modulate_color = Color(0.306923, 0.306923, 0.306923, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bajiw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqwyt"]
bg_color = Color(0.00592361, 0.173495, 0.299343, 0.788235)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.299547, 0.299548, 0.299547, 1)
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
corner_detail = 9
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iv0vr"]
bg_color = Color(0.0103152, 0.232982, 0.391596, 0.788235)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.299547, 0.299548, 0.299547, 1)
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
corner_detail = 9
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f0j1r"]
bg_color = Color(0.00615636, 0.177211, 0.305106, 0.788235)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.299547, 0.299548, 0.299547, 1)
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
corner_detail = 9
shadow_size = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iv0vr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qqwyt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f0j1r"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchor_left = -0.491
anchor_top = -0.676
anchor_right = 0.509
anchor_bottom = 0.324
offset_left = 0.800049
offset_top = 0.200073
offset_right = 0.799988
offset_bottom = 0.200012
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xsilq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.071
anchor_top = -0.5
anchor_right = 2.073
anchor_bottom = 1.112
offset_left = -40.1998
offset_top = -44.0
offset_right = 0.599609
offset_bottom = -0.400146
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bajiw")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 6.0
offset_top = 405.0
offset_right = 6.0
offset_bottom = 858.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_5a6dn")
theme_override_font_sizes/font_size = 144
text = "Get Bob To The Job"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -389.0
offset_top = 1.0
offset_right = 399.0
offset_bottom = 518.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.864675, 0.864675, 0.864675, 1)
theme_override_fonts/font = ExtResource("4_ljdde")
theme_override_font_sizes/font_size = 62
theme_override_styles/focus = SubResource("StyleBoxEmpty_bajiw")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqwyt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iv0vr")
theme_override_styles/normal = SubResource("StyleBoxFlat_f0j1r")
text = "Start Game "

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.862745, 0.862745, 0.862745, 1)
theme_override_fonts/font = ExtResource("4_ljdde")
theme_override_font_sizes/font_size = 62
theme_override_styles/focus = SubResource("StyleBoxEmpty_iv0vr")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqwyt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iv0vr")
theme_override_styles/normal = SubResource("StyleBoxFlat_f0j1r")
text = "Resume Game "

[node name="Button3" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.862745, 0.862745, 0.862745, 1)
theme_override_fonts/font = ExtResource("4_ljdde")
theme_override_font_sizes/font_size = 62
theme_override_styles/focus = SubResource("StyleBoxEmpty_qqwyt")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqwyt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iv0vr")
theme_override_styles/normal = SubResource("StyleBoxFlat_f0j1r")
text = "Options"

[node name="Button4" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.862745, 0.862745, 0.862745, 1)
theme_override_fonts/font = ExtResource("4_ljdde")
theme_override_font_sizes/font_size = 62
theme_override_styles/focus = SubResource("StyleBoxEmpty_f0j1r")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqwyt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_iv0vr")
theme_override_styles/normal = SubResource("StyleBoxFlat_f0j1r")
text = "Exit Game "

[node name="Camera2D" type="Camera2D" parent="Panel/VBoxContainer"]
position = Vector2(407, 12)
zoom = Vector2(0.85, 0.85)

[node name="ClaimedByTheVoid" type="AudioStreamPlayer2D" parent="."]
position = Vector2(887, 316)
stream = ExtResource("5_km7eu")
volume_db = -25.103
autoplay = true
stream_paused = true

[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button3" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button4" to="." method="_on_exit_pressed"]
